--- a/data-science.html
+++ b/data-science.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://crisp.recruiterbox.com/jobs/fk0jolc/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisp.recruiterbox.com/jobs/fk0jolc/'>
     Data Scientist - [Remote] - [Europe] at Crisp Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -188,7 +188,7 @@ systems, and text analytics, and a good understanding of deep learning. 5 years
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisp.recruiterbox.com/jobs/fk03hx7'>Data Scientist - [Remote] - [United States] at Crisp Inc.</a></h5> 
+<h5><a href='https://crisp.recruiterbox.com/jobs/fk03hx7'>Data Scientist - [Remote] - [United States] at Crisp Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Data Scientist - [Remote] - [United States]. Remote Full-time Allows remote. Crisp 
 is a remote-only company and we give our employees the opportunity to solve?...</p>
@@ -447,7 +447,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
